sakuli-ui-client/src/main/resources/src/styles/_modal.scss
ngb-modal-window {
  display: flex !important;

  &.sa-text-modal, &.SaTextModalComponent {
    .modal-content {
      width: 100vw;
    }
  }

  .modal-dialog {
    width: auto;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    .modal-content {
      max-width: 95vw;
      display: flex;
      flex-direction: column;
      > * {
        flex-grow: 1;
        display: flex;
        flex-direction: column;
        .modal-body {
          flex-grow: 1;
          overflow: auto;
        }
      }
    }
  }
}

